--- a/Extraccion Informacion HTML.ipynb
+++ b/Extraccion Informacion HTML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,54 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get('http://www.platzi.com')"
+    "response = requests.get('http://www.facebook.com')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "soup = bs4.BeautifulSoup(response.text,'html.parser') #Parseo del response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Platzi: Cursos online profesionales de tecnología\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(soup.title.text) #Obtención del title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<meta content=\"Aprende desde cero a crear el futuro de la web. Cursos de Desarrollo, Diseño, Marketing, y Negocios.\" name=\"description\"/>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(soup.select('meta[name=description]')) #Selector de css en el head - OJO: ES UN LIST"
    ]
   },
   {
@@ -71,7 +37,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aprende desde cero a crear el futuro de la web. Cursos de Desarrollo, Diseño, Marketing, y Negocios.\n"
+      "Facebook - Inicia sesión o regístrate\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.title.text) #Obtención del title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<meta content=\"Crea una cuenta o inicia sesión en Facebook. Conéctate con amigos, familiares y otras personas que conozcas. Comparte fotos y videos, envía mensajes y...\" name=\"description\"/>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.select('meta[name=description]')) #Selector de css en el head - OJO: ES UN LIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crea una cuenta o inicia sesión en Facebook. Conéctate con amigos, familiares y otras personas que conozcas. Comparte fotos y videos, envía mensajes y...\n"
      ]
     }
    ],
@@ -81,31 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/cursos/web-avanzado\n",
-      "/cursos/tecnicas-iluminacion\n",
-      "/cursos/fisica-matematica\n",
-      "/cursos/funcional-js\n",
-      "/cursos/oop\n",
-      "/cursos/bash-shell\n",
-      "/cursos/firebase-cloud\n",
-      "/cursos/curso-php-laravel\n",
-      "/cursos/apps-ios\n",
-      "/cursos/programacion-estructurada\n",
-      "/cursos/php-avanzado\n",
-      "/cursos/flutter\n",
-      "/cursos/machine-learning\n",
-      "/cursos/jee\n",
-      "/cursos/capacitacion-equipos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Obtención de links (hay que analizar como están estructuradas inspeccionando la página)\n",
     "courses_links = soup.select('.RecentCourses-item > a')\n",
